# sane-settings

./: README.md  pyproject.toml
src/sane_settings/: configbase.py  exceptions.py
tests/: test_bool_default_fix.py  test_secretstr_fix.py
