[project]
name = "sane-settings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicolas Paris", email = "ni.paris@gmail.com" }
]
requires-python = ">=3.11.9"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
